--- a/Lab1 (all).ipynb
+++ b/Lab1 (all).ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates = pd.read_excel(\"dates1.xlsx\", sheet_name=\"Лист1\")"
+    "dates = pd.read_excel(\"Dates1.xlsx\", sheet_name=\"Лист1\")"
    ]
   },
   {
