--- a/Lab1 (all).ipynb
+++ b/Lab1 (all).ipynb
@@ -32,7 +32,7 @@
     "date_start = '2022-08-01'\n",
     "date_end = '2022-09-18'\n",
     "x_dates = np.arange(np.datetime64(date_start), np.datetime64(date_end), dtype='datetime64[D]')\n",
-    "y_atm_pr = dates['Pressure']"
+    "y_atm_pr = dates['Price']"
    ]
   },
   {
@@ -540,7 +540,7 @@
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
-    "ax.set_ylabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_ylabel('Рыночная цена ($)')\n",
     "ax.grid('True')\n",
     "plt.show()\n",
     "fig.savefig(\"plot_atm_pr.pdf\")"
