--- a/Lab1 (all).ipynb
+++ b/Lab1 (all).ipynb
@@ -644,7 +644,7 @@
     "fig, ax = plt.subplots()\n",
     "x = x_dates\n",
     "y = dates[\"Pressure\"]\n",
-    "ax.plot(x, y, label = \"график атмосферного давления\")\n",
+    "ax.plot(x, y, label = \"график рыночной цены\")\n",
     "x_new = x_dates[1:moving_averages_min.size+1]\n",
     "y_new = moving_averages_min\n",
     "ax.plot(x_new, y_new, label = \"кривая скользящих средних по периоду 3\")\n",
@@ -652,7 +652,7 @@
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
-    "ax.set_ylabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_ylabel('Рыночная цена ($)')\n",
     "ax.grid('True')\n",
     "ax.legend()\n",
     "plt.show()\n",
@@ -691,7 +691,7 @@
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
-    "ax.set_ylabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_ylabel('Рыночная цена ($)')\n",
     "ax.grid(True)\n",
     "ax.legend()\n",
     "plt.show()\n",
@@ -730,13 +730,13 @@
     "\n",
     "ax.plot(x_mv3, y_mse_3, label = \"кривая скользящих средних по периоду 3\")\n",
     "ax.plot(x_mv10, y_mse_10, label = \"кривая скользящих средних по периоду 10\")\n",
-    "ax.plot(x, y, label = \"график динамики атмосферного давления\")\n",
+    "ax.plot(x, y, label = \"график динамики рыночной цены\")\n",
     "\n",
     "ax.set(xticks=np.arange(np.datetime64('2022-08-01'), np.datetime64('2022-09-18'), np.timedelta64(3,'D')))\n",
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
-    "ax.set_ylabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_ylabel('Рыночная цена ($)')\n",
     "ax.grid(True)\n",
     "ax.legend()\n",
     "plt.show()\n",
@@ -832,7 +832,7 @@
     "\n",
     "# ax.set(xlim=(min_y, max_y_2+h),xticks=np.arange(min_y, max_y_2+2*h, h))\n",
     "ax.set(xlim=(min_y, np.max(np.sort(y_atm_pr))),xticks=np.arange(min_y, np.max(np.sort(y_atm_pr)), h))\n",
-    "ax.set_xlabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_xlabel('Рыночная цена ($)')\n",
     "ax.set_ylabel('Относительная частота')\n",
     "\n",
     "ax.legend()\n",
@@ -895,7 +895,7 @@
     "\n",
     "# ax.set(xlim=(min_y, max_y_2+h),xticks=np.arange(min_y, max_y_2+2*h, h))\n",
     "ax.set(xlim=(min_y, np.max(np.sort(y_atm_pr))),xticks=np.arange(min_y, np.max(np.sort(y_atm_pr)), h))\n",
-    "ax.set_xlabel('Атмосферное давление (мм ртутного столба)')\n",
+    "ax.set_xlabel('Рыночная цена ($)')\n",
     "ax.set_ylabel('Относительная частота')\n",
     "\n",
     "ax.legend()\n",
