--- a/Lab1 (all).ipynb
+++ b/Lab1 (all).ipynb
@@ -29,8 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "date_start = '2022-08-01'\n",
-    "date_end = '2022-09-18'\n",
+    "date_start = '2013-08-01'\n",
+    "date_end = '2013-09-18'\n",
     "x_dates = np.arange(np.datetime64(date_start), np.datetime64(date_end), dtype='datetime64[D]')\n",
     "y_atm_pr = dates['Price']"
    ]
@@ -643,12 +643,12 @@
     "import matplotlib as mpl\n",
     "fig, ax = plt.subplots()\n",
     "x = x_dates\n",
-    "y = dates[\"Pressure\"]\n",
+    "y = dates[\"Price\"]\n",
     "ax.plot(x, y, label = \"график рыночной цены\")\n",
     "x_new = x_dates[1:moving_averages_min.size+1]\n",
     "y_new = moving_averages_min\n",
     "ax.plot(x_new, y_new, label = \"кривая скользящих средних по периоду 3\")\n",
-    "ax.set(xticks=np.arange(np.datetime64('2022-08-01'), np.datetime64('2022-09-18'), np.timedelta64(3,'D')))\n",
+    "ax.set(xticks=np.arange(np.datetime64('2013-08-01'), np.datetime64('2013-09-18'), np.timedelta64(3,'D')))\n",
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
@@ -687,7 +687,7 @@
     "\n",
     "ax.plot(x_mv3, y_mse_3, label = \"кривая скользящих средних по периоду 3\")\n",
     "ax.plot(x_mv10, y_mse_10, label = \"кривая скользящих средних по периоду 10\")\n",
-    "ax.set(xticks=np.arange(np.datetime64('2022-08-01'), np.datetime64('2022-09-18'), np.timedelta64(3,'D')))\n",
+    "ax.set(xticks=np.arange(np.datetime64('2013-08-01'), np.datetime64('2013-09-18'), np.timedelta64(3,'D')))\n",
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
@@ -721,7 +721,7 @@
     "fig, ax = plt.subplots()\n",
     "\n",
     "x = x_dates\n",
-    "y = dates[\"Pressure\"]\n",
+    "y = dates[\"Price\"]\n",
     "x_mv3 = x_dates[1:moving_averages_3.size+1]\n",
     "x_mv10 = x_dates[4:moving_averages_10.size+4]\n",
     "y_mse_3 = moving_averages_3\n",
@@ -732,7 +732,7 @@
     "ax.plot(x_mv10, y_mse_10, label = \"кривая скользящих средних по периоду 10\")\n",
     "ax.plot(x, y, label = \"график динамики рыночной цены\")\n",
     "\n",
-    "ax.set(xticks=np.arange(np.datetime64('2022-08-01'), np.datetime64('2022-09-18'), np.timedelta64(3,'D')))\n",
+    "ax.set(xticks=np.arange(np.datetime64('2013-08-01'), np.datetime64('2013-09-18'), np.timedelta64(3,'D')))\n",
     "cdf = mpl.dates.ConciseDateFormatter(ax.xaxis.get_major_locator())\n",
     "ax.xaxis.set_major_formatter(cdf);\n",
     "ax.set_xlabel('Дата (день)')\n",
@@ -806,7 +806,7 @@
     "sigma = np.std(y_atm_pr)\n",
     "\n",
     "x_dates = np.arange(np.datetime64(date_start), np.datetime64(date_end), dtype='datetime64[D]')\n",
-    "y_atm_pr = dates['Pressure']\n",
+    "y_atm_pr = dates['Price']\n",
     "mu = np.mean(y_atm_pr)\n",
     "sigma = np.std(y_atm_pr)\n",
     "\n",
@@ -868,7 +868,7 @@
     "count, bins, ignored = ax.hist(np.sort(y_atm_pr), bins = np.arange(min_y, max_y_2+2*h, h), density=True, label='гистограмма относительных частот')\n",
     "\n",
     "x_dates = np.arange(np.datetime64(date_start), np.datetime64(date_end), dtype='datetime64[D]')\n",
-    "y_atm_pr = dates['Pressure']\n",
+    "y_atm_pr = dates['Price']\n",
     "mu = np.mean(y_atm_pr)\n",
     "sigma = np.std(y_atm_pr)\n",
     "\n",
@@ -1214,7 +1214,7 @@
     "ax.grid('True')\n",
     "ax.set(ylim = (730, 760))\n",
     "\n",
-    "ax.set_ylabel(\"Атмосферное давление (мм ртутного столба)\")\n",
+    "ax.set_ylabel(\"Рыночная цена ($)\")\n",
     "plt.show()\n",
     "fig.savefig(\"boxplot_with_metrics.pdf\");"
    ]
